applets/devicenotifier: don't do check in mount action

BUG: 505852

Don't do check in the mount action. Create another action for check. Also
change the name of the mount action to just "mount" if check was done.