applets/devicenotifier/actions/mountaction.cpp
@@ -71,12 +71,7 @@ void MountAction::triggered()
     if (device.is<Solid::StorageAccess>()) {
         Solid::StorageAccess *access = device.as<Solid::StorageAccess>();
         if (access && !access->isAccessible()) {
-            if (!m_stateMonitor->isChecked(m_udi) && access->canCheck()) {
-                connect(m_stateMonitor.get(), &DevicesStateMonitor::stateChanged, this, &MountAction::deviceStateChanged);
-                access->check();
-            } else {
-                access->setup();
-            }
+            access->setup();
         }
     }
 }
@@ -101,20 +96,14 @@ QString MountAction::icon() const
 
 QString MountAction::text() const
 {
+    Solid::Device device(m_udi);
+    if (device.is<Solid::StorageAccess>()) {
+        Solid::StorageAccess *access = device.as<Solid::StorageAccess>();
+        if (access && access->canCheck() && !m_stateMonitor->isChecked(m_udi)) {
+            return i18nc("@action:button Mount a disk without verifying for errors", "Mount without verifying");
+        }
+    }
     return i18n("Mount");
-}
-
-void MountAction::deviceStateChanged(const QString &udi)
-{
-    if (udi != m_udi || m_stateMonitor->getState(m_udi) != DevicesStateMonitor::CheckDone) {
-        return;
-    }
-
-    qCDebug(APPLETS::DEVICENOTIFIER) << "Mount action check done, need repair: " << m_stateMonitor->needRepair(m_udi);
-    disconnect(m_stateMonitor.get(), &DevicesStateMonitor::stateChanged, this, &MountAction::deviceStateChanged);
-    if (!m_stateMonitor->needRepair(m_udi)) {
-        MountAction::triggered();
-    }
 }
 
 #include "moc_mountaction.cpp"
